--- a/CarSalesProject/Views/GestionVehicules/AjoutVehicule.cshtml
+++ b/CarSalesProject/Views/GestionVehicules/AjoutVehicule.cshtml
@@ -4,27 +4,9 @@
     ViewBag.Title = "Ajout Vehicule";
 }
 
-<script type="text/javascript">
-    function ShowHideTextBox(ddl) {
-        if (ddl.options[ddl.selectedIndex].text == "Occasion") {
-            $("#lblOccasionKmAchat").show();
-            $("#tbxOccasionKmAchat").show();
-            $("#lblOccasionKmVente").show();
-            $("#tbxOccasionKmVente").show();
-        }
-        else {
-            $("#lblOccasionKmAchat").hide();
-            $("#tbxOccasionKmAchat").hide();
-            $("#lblOccasionKmVente").hide();
-            $("#tbxOccasionKmVente").hide();
-        }
-    }
-</script>
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>@ViewBag.Title</h1>
 </div>
 
 @using (Html.BeginForm("Valider", "AjoutVehicule", FormMethod.Post, new { id = "ajoutVehicule" }))
@@ -40,12 +22,12 @@
             @Html.ValidationMessageFor(m => m.Vehicule.Immatriculation)
 
             @Html.LabelFor(m => m.CouleursVehicule)
-            @Html.DropDownListFor(m => m.CouleursVehicule, Model.CouleursVehicule)
+            @Html.DropDownListFor(m => m.Vehicule.Couleur, Model.CouleursVehicule)
             @Html.ValidationMessageFor(m => m.CouleursVehicule)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Marques)
-            @Html.DropDownListFor(m => m.Marques, Model.Marques.Select(marq => new SelectListItem
+            @Html.DropDownListFor(m => m.Vehicule.Marque, Model.Marques.Select(marq => new SelectListItem
             {
                 Value = marq.Nom,
                 Text = marq.Nom
@@ -70,8 +52,12 @@
             @Html.ValidationMessageFor(m => m.Vehicule.PrixAchat)
 
             @Html.LabelFor(m => m.Vehicule.DateAchat)
-            @Html.TextBoxFor(m => m.Vehicule.DateAchat)
+            @Html.EditorFor(m => m.Vehicule.DateAchat, new { @type = "date", @min = "2017-04-01", @max = "2017-04-30" })
             @Html.ValidationMessageFor(m => m.Vehicule.DateAchat)
+
+            @Html.LabelFor(m => m.Vehicule.DateVente)
+            @Html.EditorFor(m => m.Vehicule.DateVente, new { @type = "date", @value = DateTime.Now.ToString("DD-MM-YYYY"), @min = "01-01-1900", @max = "01-01-2500" })
+            @Html.ValidationMessageFor(m => m.Vehicule.DateVente)
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.VehiculeOccasion.KilometrageAchat, new { id = "lblOccasionKmAchat" })
@@ -86,3 +72,20 @@
     <button type="submit" class="btn btn-default">Valider</button>
     <input type="submit" asp-page-handler="Retour" formaction="@Url.Action("Retour")" value="Retour" />
 }
+
+<script type="text/javascript">
+    function ShowHideTextBox(ddl) {
+        if (ddl.options[ddl.selectedIndex].text == "Occasion") {
+            $("#lblOccasionKmAchat").show();
+            $("#tbxOccasionKmAchat").show();
+            $("#lblOccasionKmVente").show();
+            $("#tbxOccasionKmVente").show();
+        }
+        else {
+            $("#lblOccasionKmAchat").hide();
+            $("#tbxOccasionKmAchat").hide();
+            $("#lblOccasionKmVente").hide();
+            $("#tbxOccasionKmVente").hide();
+        }
+    }
+</script>
