--- a/CarSalesProject/Views/Home/Index.cshtml
+++ b/CarSalesProject/Views/Home/Index.cshtml
@@ -1,7 +1,31 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model CarSalesData.Personne
+
+@{
+    ViewBag.Title = "Connexion";
 }
 
 <div class="jumbotron">
-    <h1>Home</h1>
+    <h1>@ViewBag.Title</h1>
+</div>
+
+
+<div>
+    @using (Html.BeginForm("ValidationConnexion", "Home", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Email)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.MotDePasse)
+            @Html.PasswordFor(m => m.MotDePasse, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.MotDePasse)
+        </div>
+        <button type="submit" class="btn btn-default">Valider</button>
+
+    }
+
+
 </div>
