--- a/CarSalesProject/Views/Account/Index.cshtml
+++ b/CarSalesProject/Views/Account/Index.cshtml
@@ -17,7 +17,7 @@
         {
          <div class="container">
                 <button style="width:150px; padding:10px;margin-bottom:15px" class="btn btn-default center-block" type="button" id='@("Id" + fonction)'
-                 onclick="location.href='@Url.Action("Index" + fonction, "Account")'">@fonction</button>
+                 onclick="location.href='/@fonction/Index'">@fonction</button>
         </div>
         }
     }
